<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">5te5</string>
    <string name="hello_world">Hello world!</string>
    <string name="kuladi">Kullanıcı Adı</string>
    <string name="sifre">Şifre</string>
    <string name="ad">Adınız</string>
    <string name="soyad">Soyadınız</string>
    <string name="mail">Mail Adresi</string>

    <color name="beyaz">#ffffff</color>

       <string name="action1">Oyuna Başla</string>
    <string name="action2">Puan Durumu</string>
    <string name="action3">Ödüller</string>
      <string name="action4">Profil</string>
        <string name="action5">Çıkış</string>
    
    <dimen name="kenar">70dp</dimen>
    <dimen name="logobosluk">105dp</dimen>
    <dimen name="anasayfaedittext">30dp</dimen>
    <dimen name="anasayfaustedittext">50dp</dimen>
    <dimen name="sifremiunutumayar">30dp</dimen>
    <dimen name="sifremiunutumayarsag">35dp</dimen>
    <dimen name="sifremiunutumayarust">20dp</dimen>
    <dimen name="linear">300dp</dimen>

    <string name="title_activity_anasayfa">Anasayfa</string>
    <string name="title_activity_kayit1">Kayit1</string>
    <string name="title_activity_kayit2">Kayit2</string>
    <string name="title_activity_kayit3">Kayit3</string>
    <string name="title_activity_kayit4">Kayit4</string>
    <string name="title_activity_kayit5">Kayit5</string>
    <string name="title_activity_soru1">Soru1</string>
    <string name="title_activity_dogru">Dogru</string>
    <string name="title_activity_yanlis">Yanlis</string>
    <string name="title_activity_soru2">Soru2</string>
    <string name="title_activity_soru3">Soru3</string>
    <string name="title_activity_soru4">Soru4</string>
    <string name="title_activity_soru5">Soru5</string>
    <string name="title_activity_puan_durumu">PuanDurumu</string>
    <string name="title_activity_puan_siralamasi">PuanSiralamasi</string>
    <string name="title_activity_gpuan_siralamasi">GPuanSiralamasi</string>
    <string name="title_activity_profil">Profil</string>
    <string name="title_activity_bilgiler">Bilgiler</string>
    <string name="title_activity_soruyu_paylas">SoruyuPaylas</string>
    <string name="title_activity_surenizdoldu">Surenizdoldu</string>
    <string name="title_activity_networkkontrol">Networkkontrol</string>
    <string name="title_activity_hata">Hata</string>
    <string name="title_activity_oduller">Oduller</string>
    <string name="title_activity_face">Face</string>
    <string name="title_activity_kullanici_soru">KullaniciSoru</string>
    <string name="title_activity_reklamizlet">Reklamizlet</string>
    <string name="title_activity_google">Google</string>

</resources>
